# nail

./: CMakeLists.txt  INSTALL  README.md
cmake/: FindBioMedicalDataIO.cmake  FindGFlags.cmake
data/: gcampchannel_mip.tif  mb_compartments.txt  mb_compartments_ver2.txt  resolution.rtf
data/otherFileFormats/: imageReadWrite.sh
scripts/: mappingMBC.sh  mappingMBC2.sh
src/: CMakeLists.txt  CMakeLists.txt~  dataio.cpp  dataio.h  image.h  image.hpp  image.hxx  main.cpp  nail.cpp  nail.h
